--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
 framework:
     #esi:             ~
     #translator:      { fallback: %locale% }
+    translator:      { fallback: ja }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
