--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,10 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "pingdecopong/Ober2doctrineBundle": "0.0.7",
-        "pingdecopong/FormFreezeBundle": "0.0.2",
-        "pingdecopong/PagerBundle": "0.0.1",
+        "pingdecopong/Ober2doctrineBundle": "0.0.*",
+        "pingdecopong/FormFreezeBundle": "0.0.*",
+        "pingdecopong/PagerBundle": "0.0.*",
+        "pingdecopong/PDPGeneratorBundle": "0.0.*",
         "doctrine/data-fixtures" : "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master"
     },
@@ -69,6 +70,10 @@
     {
         "type": "vcs",
         "url": "https://github.com/pingdecopong/PagerBundle.git"
+    },
+    {
+        "type": "vcs",
+        "url": "https://github.com/pingdecopong/PDPGeneratorBundle.git"
     }
 
 ]
