--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,17 +1,21 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        Arte\PCMS\BizlogicBundle\Entity\TBSystemUser: plaintext
+#        Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        my_users:
+#            entity: { class: Arte\PCMS\BizlogicBundle\Entity\TBSystemUser, property: Username }
+            entity: { class: Arte\PCMS\BizlogicBundle\Entity\TBSystemUser }
+#        in_memory:
+#            memory:
+#                users:
+#                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+#                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
 
     firewalls:
         dev:
@@ -19,21 +23,24 @@ security:
             security: false
 
         login:
-            pattern:  ^/demo/secured/login$
+            pattern:  ^/login$
             security: false
 
         secured_area:
-            pattern:    ^/demo/secured/
+#            pattern:    ^/
+            pattern:    ^/demo/
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                check_path: auth_login_check
+                login_path: auth_login
             logout:
-                path:   _demo_logout
-                target: _demo
+                path:   auth_logout
+                target: auth_login
             #anonymous: ~
             #http_basic:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
+        # /testにはROLE_USERとROLE_ADMINがアクセス可能
+        - { path: ^/, roles: ROLE_USER }
+#        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
