--- a/src/Arte/PCMS/BizlogicBundle/Resources/config/doctrine/TBCustomer.orm.yml
+++ b/src/Arte/PCMS/BizlogicBundle/Resources/config/doctrine/TBCustomer.orm.yml
@@ -18,5 +18,8 @@ Arte\PCMS\BizlogicBundle\Entity\TBCustomer:
         TBProjectMastersCustomerId:
             targetEntity: TBProjectMaster
             mappedBy: TBCustomerCustomerId
+        VProjectViewsCustomerId:
+            targetEntity: VProjectView
+            mappedBy: TBCustomerCustomerId
     manyToOne: {  }
     manyToMany: {  }
