--- a/src/Arte/PCMS/BizlogicBundle/Resources/config/doctrine/TBProjectMaster.orm.yml
+++ b/src/Arte/PCMS/BizlogicBundle/Resources/config/doctrine/TBProjectMaster.orm.yml
@@ -46,6 +46,9 @@ Arte\PCMS\BizlogicBundle\Entity\TBProjectMaster:
         TBProjectCostMastersProjectMasterId:
             targetEntity: TBProjectCostMaster
             mappedBy: TBProjectMasterProjectMasterId
+        TBProjectCostHierarchyMastersTBProjectMasterId:
+            targetEntity: TBProjectCostHierarchyMaster
+            mappedBy: TBProjectMasterTBProjectMasterId
     manyToOne:
         TBCustomerCustomerId:
             targetEntity: TBCustomer
