--- a/src/Arte/PCMS/BizlogicBundle/Resources/config/doctrine/TBProjectCostMaster.orm.yml
+++ b/src/Arte/PCMS/BizlogicBundle/Resources/config/doctrine/TBProjectCostMaster.orm.yml
@@ -22,11 +22,14 @@ Arte\PCMS\BizlogicBundle\Entity\TBProjectCostMaster:
             nullable: true
         DeleteFlag:
             type: boolean
-            nullable: true
+            nullable: false
         HierarchyPath:
             type: string
             length: 255
             nullable: true
+        TBProjectCostHierarchyMasterId:
+            type: integer
+            nullable: false
     oneToMany:
         TBProductionCostsProjectCostMasterId:
             targetEntity: TBProductionCost
@@ -37,5 +40,11 @@ Arte\PCMS\BizlogicBundle\Entity\TBProjectCostMaster:
             inversedBy: TBProjectCostMastersProjectMasterId
             joinColumns:
                 ProjectMasterId:
+                    referencedColumnName: id
+        TBProjectCostHierarchyMasterTBProjectCostHierarchyMasterId:
+            targetEntity: TBProjectCostHierarchyMaster
+            inversedBy: TBProjectCostMastersTBProjectCostHierarchyMasterId
+            joinColumns:
+                TBProjectCostHierarchyMasterId:
                     referencedColumnName: id
     manyToMany: {  }
