--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,10 @@
+# root
+root:
+    path: /
+    defaults:
+        _controller: FrameworkBundle:Redirect:Redirect
+        route: public_project_list
+
 # ログイン
 auth_login:
     pattern: /login
