--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,10 @@
 security:
     encoders:
-        Arte\PCMS\BizlogicBundle\Entity\TBSystemUser: plaintext
+        Arte\PCMS\BizlogicBundle\Entity\TBSystemUser:
+            algorithm:        sha1
+            encode_as_base64: false
+            iterations:       1
+#        Arte\PCMS\BizlogicBundle\Entity\TBSystemUser: plaintext
 #        Symfony\Component\Security\Core\User\User: plaintext
 
     role_hierarchy:
@@ -27,11 +31,12 @@ security:
             security: false
 
         secured_area:
-#            pattern:    ^/
-            pattern:    ^/demo/
+            pattern:    ^/
+#            pattern:    ^/demo/
             form_login:
                 check_path: auth_login_check
                 login_path: auth_login
+                default_target_path: public_project_list
             logout:
                 path:   auth_logout
                 target: auth_login
@@ -41,6 +46,7 @@ security:
 
     access_control:
         # /testにはROLE_USERとROLE_ADMINがアクセス可能
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/public, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
 #        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
